--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,11 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  background: white;
+  background: grey;
 }
 
 .home {
-  height: 92vh;
+  height: 110vh;
   width: 100%;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(18, 194, 233, 0.7)), color-stop(rgba(196, 113, 237, 0.7)), to(rgba(247, 121, 125, 0.7))), url(../images/hero.jpg);
   background-image: linear-gradient(to right, rgba(18, 194, 233, 0.7), rgba(196, 113, 237, 0.7), rgba(247, 121, 125, 0.7)), url(../images/hero.jpg);
